fix(puf): mask-size contain css property on checkmarks to prevent clipping

--- a/express/blocks/puf/puf.css
+++ b/express/blocks/puf/puf.css
@@ -330,7 +330,9 @@ main .puf .puf-right {
         -webkit-mask-image: url('/express/blocks/puf/check.svg');
         mask-image: url('/express/blocks/puf/check.svg');
         -webkit-mask-repeat: no-repeat;
-        -webkit-mask-size: 100% auto;
+        -webkit-mask-size: contain;
+        mask-position: center;
+        mask-size: contain;
     }
 }
 
